--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 
 
+.user-item {
+  padding: 16px;
+  margin-bottom: 16px;
+  background-color: #fff;
+  border: 1px solid #f0f0f0;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
 .App {
   text-align: center;
 }
